--- a/s/3/index.html
+++ b/s/3/index.html
@@ -192,6 +192,49 @@
 		/*mix-blend-mode: lighten;*/
 	}
 	
+	
+	.rqq{
+		animation: rqq 32s linear 0s infinite normal;
+		-webkit-animation: rqq 32s linear 0s infinite normal;
+	}
+	@keyframes rqq {
+		0%{ top: 350px; }
+		8%{ top: 300px; }
+		16%{ top: 150px; }
+		32%{ top: -150px; }
+		48%{ top:-150px; }
+		56%{ top: 100px; }
+		64%{ top: 350px; }
+		100%{ top: 350px; }
+	}
+	
+	@-webkit-keyframes rqq{
+		0%{ top: 350px; }
+		8%{ top: 300px; }
+		16%{ top: 150px; }
+		32%{ top: -150px; }
+		48%{ top:-150px; }
+		56%{ top: 100px; }
+		64%{ top: 350px; }
+		100%{ top: 350px; }
+	}
+	
+	
+	.fz{
+		animation: fz 10s linear 0s normal;
+		-webkit-animation: fz 10s linear 0s normal;
+	}
+	@keyframes fz {
+		0%{ top: 250px; }
+		80%{ top: 50px; }
+	}
+	
+	@-webkit-keyframes fz{
+		0%{ top: 250px; }
+		80%{ top: 50px; }
+	}
+	
+	
 	#info{
 		position: absolute;
 		top:100px;
@@ -345,8 +388,11 @@
 <script>
 
 window.onload=function (){
+
+/*******************************/
+	
 	var picjson=[
-	{ "dis":350,"width":1760,"background":"url(img/bg1.jpg)"},
+{ "dis":350,"width":1760,"background":"url(img/bg1.jpg)"},
 	{ "dis":0,"width":60,"top":260,"class":"build","background":"url(img/ys.png) no-repeat"},
 	{ "dis":-50,"width":50,"height":50,"top":600,"class":"point","background":"url(img/point.gif) no-repeat","info":"url(img/info_ys_wcgzm.png) no-repeat"},
 	{ "dis":1320,"width":660,"top":528,"class":"build","background":"url(img/ys_wcgzm.png) no-repeat","bgleft":50},
@@ -354,6 +400,7 @@ window.onload=function (){
 	{ "dis":20,"width":50,"height":50,"top":600,"class":"point","background":"url(img/point.gif) no-repeat","info":"url(img/info_lz_bet.png) no-repeat"},
 	{ "dis":40,"width":273,"top":327,"class":"build","background":"url(img/lz_bet.png) no-repeat","bgleft":0},
 	{ "dis":0,"width":200,"top":765,"class":"yuer","background":"url(img/jiangtun.gif) no-repeat","bgleft":50},	
+	{ "dis":0,"width":211,"top":50,"class":"fz","background":"url(img/fz.gif) no-repeat","bgleft":50},
 	
 	{ "dis":1100,"width":2320,"background":"url(img/bg2.jpg)"},
 	{ "dis":300,"width":60,"top":260,"class":"build","background":"url(img/cq.png) no-repeat"},
@@ -370,7 +417,8 @@ window.onload=function (){
 	{ "dis":0,"width":50,"height":50,"top":600,"class":"point","background":"url(img/point.gif) no-repeat","info":"url(img/info_yc_trt.png) no-repeat"},
 	{ "dis":500,"width":341,"top":203,"class":"build","background":"url(img/yc_trt.png) no-repeat","bgleft":50},
 	{ "dis":0,"width":200,"top":765,"class":"yuer","background":"url(img/jiangtun.gif) no-repeat","bgleft":50},	
-	
+	{ "dis":0,"width":211,"top":50,"class":"rqq","background":"url(img/rqq.png) no-repeat","bgleft":50},
+		
 	{ "dis":780,"width":1280,"background":"url(img/bg2.jpg)"},
 	{ "dis":0,"width":60,"top":260,"class":"build","background":"url(img/jz.png) no-repeat"},
 	{ "dis":0,"width":50,"height":50,"top":600,"class":"point","background":"url(img/point.gif) no-repeat","info":"url(img/info_jz_jlc.png) no-repeat"},
@@ -387,7 +435,9 @@ window.onload=function (){
 	{ "dis":0,"width":60,"top":260,"class":"build","background":"url(img/cb.png) no-repeat"},
 	{ "dis":0,"width":50,"height":50,"top":600,"class":"point","background":"url(img/point.gif) no-repeat","info":"url(img/info_cb_chibi.png) no-repeat"},
 	{ "dis":700,"width":482,"top":589,"class":"build","background":"url(img/chibi.png) no-repeat","bgleft":50},
-	{ "dis":70,"width":60,"top":260,"class":"build","background":"url(img/wh.png) no-repeat"},
+	{ "dis":140,"width":60,"top":260,"class":"build","background":"url(img/wh.png) no-repeat"},
+	{ "dis":-70,"width":50,"height":50,"top":430,"class":"point","background":"url(img/point.gif) no-repeat","info":"url(img/info_wh_hjzy.png) no-repeat"},
+	{ "dis":0,"width":578,"top":323,"class":"build","background":"url(img/wh_hjzy.gif) no-repeat","bgleft":50},
 	{ "dis":-70,"width":50,"height":50,"top":600,"class":"point","background":"url(img/point.gif) no-repeat","info":"url(img/info_wh_ddf.png) no-repeat"},
 	{ "dis":450,"width":578,"top":553,"class":"build","background":"url(img/wh_ddf.png) no-repeat","bgleft":50},
 	{ "dis":-120,"width":50,"height":50,"top":600,"class":"point","background":"url(img/point.gif) no-repeat","info":"url(img/info_wh_jhg.png) no-repeat"},
@@ -408,6 +458,7 @@ window.onload=function (){
 	{ "dis":-100,"width":50,"height":50,"top":600,"class":"point","background":"url(img/point.gif) no-repeat","info":"url(img/info_jj_sjl.png) no-repeat"},	
 	{ "dis":750,"width":532,"top":386,"class":"build","background":"url(img/jj_sjl.png) no-repeat","bgleft":50},
 	{ "dis":0,"width":200,"top":765,"class":"yuer","background":"url(img/jiangtun.gif) no-repeat","bgleft":50},	
+	{ "dis":0,"width":211,"top":50,"class":"rqq","background":"url(img/rqq2.png) no-repeat","bgleft":50},
 	
 	{ "dis":880,"width":1280,"background":"url(img/bg.jpg)"},
 	{ "dis":0,"width":60,"top":260,"class":"build","background":"url(img/aq.png) no-repeat"},
@@ -419,12 +470,12 @@ window.onload=function (){
 	{ "dis":880,"width":1280,"background":"url(img/bg.jpg)"},
 	{ "dis":0,"width":60,"top":260,"class":"build","background":"url(img/wh2.png) no-repeat"},
 	{ "dis":0,"width":50,"height":50,"top":600,"class":"point","background":"url(img/point.gif) no-repeat","info":"url(img/info_wh2_zjt.png) no-repeat"},	
-	{ "dis":400,"width":341,"top":384,"class":"build","background":"url(img/wh2_zjt.png) no-repeat","bgleft":50},
+	{ "dis":400,"width":341,"top":328,"class":"build","background":"url(img/wh2_zjt.png) no-repeat","bgleft":50},
 		
 	{ "dis":700,"width":2560,"background":"url(img/bg.jpg)"},
 	{ "dis":150,"width":60,"top":260,"class":"build","background":"url(img/nj.png) no-repeat"},
 	{ "dis":-150,"width":50,"height":50,"top":600,"class":"point","background":"url(img/point.gif) no-repeat","info":"url(img/info_nj_zsl.png) no-repeat"},	
-	{ "dis":510,"width":622,"top":365,"class":"build","background":"url(img/nj_zsl.png) no-repeat","bgleft":50},
+	{ "dis":510,"width":622,"top":396,"class":"build","background":"url(img/nj_zsl.png) no-repeat","bgleft":50},
 	{ "dis":-150,"width":50,"height":50,"top":600,"class":"point","background":"url(img/point.gif) no-repeat","info":"url(img/info_nj_ztf.png) no-repeat"},	
 	{ "dis":570,"width":632,"top":319,"class":"build","background":"url(img/nj_ztf.png) no-repeat","bgleft":50},
 	{ "dis":-150,"width":50,"height":50,"top":600,"class":"point","background":"url(img/point.gif) no-repeat","info":"url(img/info_nj_fzm.png) no-repeat"},	
@@ -444,6 +495,7 @@ window.onload=function (){
 	{ "dis":0,"width":50,"height":50,"top":600,"class":"point","background":"url(img/point.gif) no-repeat","info":"url(img/info_zj_cst.png) no-repeat"},	
 	{ "dis":400,"width":350,"top":191,"class":"build","background":"url(img/zj_cst.png) no-repeat","bgleft":50},
 	{ "dis":0,"width":350,"top":791,"class":"boat","background":"url(img/boat01.png) no-repeat","bgleft":50},
+	{ "dis":0,"width":211,"top":50,"class":"rqq","background":"url(img/rqq1.png) no-repeat","bgleft":50},
 	
 	{ "dis":880,"width":1280,"background":"url(img/bg0.jpg)"},
 	{ "dis":0,"width":60,"top":260,"class":"build","background":"url(img/nt.png) no-repeat"},
@@ -469,9 +521,7 @@ window.onload=function (){
 	{ "dis":160,"width":640,"class":"mid","background":"url(img/mid.png) repeat-y"},
 	{ "dis":60,"width":386,"class":"mid","background":"url(img/wlcjt.png) no-repeat"},
 	{ "dis":480,"width":480,"background":"url(img/bg1.jpg)"},	
-	];	
-eval(function(p,a,c,k,e,d){e=function(c){return(c<a?"":e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)d[e(c)]=k[c]||e(c);k=[function(e){return d[e]}];e=function(){return'\\w+'};c=1;};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p;}('h D=[];o 1v(E){h E=(1E E!="1C")?[E]:E;v(h i=0;i<E.I;i++){D[i]=1t 1F();D[i].1S="1J/"+E[i]}}h A=d.I;1s.1N.Z=o(){v(h i=0;i<1w.I;i++){h 1f=1w[i];e(15.1D(1f)==-1){15.1H(1f)}}};h P=1t 1s();v(h i=1;i<A;i++){P.Z(d[i].10.Y(\'/\')[1].Y(\')\')[0]);e(d[i].n)P.Z(d[i].n.Y(\'/\')[1].Y(\')\')[0])}P.Z("1B.p","16.1Q","W.p","11.p","19.p","1a.p","18.1R","1W.p","1X.p","1U.p","1V.p","1K.p","1L.p");1v(P);h M=0;h 1i=1M(o(){e(M==D.I){1z(1i);1n();q}M=0;v(h i=0;i<D.I;i++)e(D[i].L)M++;8.4(\'1P\').1m="1O<1I>"+1T(1l*M/D.I)+"%"},1l);d[0].T=0;v(h i=1;i<A;i++)d[i].T=d[i-1].T+d[i-1].1j;h z=0;h X=1c;e(1A.1G.V<=1k)X=1k;h J=0;v(h i=0;i<A;i++)J+=d[i].1j;h r="";v(h i=0;i<A;i++)r+=\'<j l="g\'+i+\'"></j>\';r+=\'<j l="N" ></j>\';r+=\'<u l="1r"><j l="1a" ></j></u>\';r+=\'<j l="19" ></j>\';r+=\'<j l="11" ></j>\';r+=\'<j l="16" ></j>\';r+=\'<u l="1y"><j l="18" ></j></u>\';r+=\'<u l="n" ><u l="17" ></u></u>\';r+=\'<u l="1u"><j l="W" ></j></u>\';o 1n(){h S=8.4(\'2d\');S.1m=r;v(h i=0;i<A;i++){e(d[i].L)8.4(\'g\'+i).c.L=d[i].L+"x";t 8.4(\'g\'+i).c.L="2f";8.4(\'g\'+i).c.V=d[i].V+"x";8.4(\'g\'+i).c.10=d[i].10;8.4(\'g\'+i).c.C="O";e(d[i].1e){8.4(\'g\'+i).c.1e=d[i].1e+"x"}e(d[i].n){8.4(\'g\'+i).n=d[i].n}e(d[i].B){8.4(\'g\'+i).y=d[i].B;e(d[i].B=="W")8.4(\'g\'+i).c.k="2";t e(d[i].B=="1o")8.4(\'g\'+i).c.k="6";t e(d[i].B=="2g")8.4(\'g\'+i).c.k="7";t e(d[i].B=="2h")8.4(\'g\'+i).c.k="1";t e(d[i].B=="2c"){8.4(\'g\'+i).c.k="7";8.4(\'g\'+i).1p=8.4(\'g\'+i).1d=o(){8.4(\'n\').c.10=15.n;8.4(\'n\').c.C="1q"}}t 8.4(\'g\'+i).c.k="3"}}8.4(\'n\').c.C="O";8.4(\'17\').1p=8.4(\'17\').1d=o(){8.4(\'n\').c.C="O"};8.4(\'1a\').c.k="1";8.4(\'19\').c.k="1";8.4(\'W\').c.k="1";8.4(\'18\').c.k="1";8.4(\'16\').c.k="1";8.4(\'n\').c.k="9";8.4(\'N\').c.k="5";8.4(\'11\').c.k="9";S.2l=o(K){q 2m(K,Q)};S.1d=o(K){q 2j(K,Q)};S.2k=o(K){q 2i(K,Q)};Q(22,0)}o H(a,b){e(a>0)q a%b;e(a%b)q b-((-a)%b);q 0}o 23(m,s){m=24.21(m);m=1-(s*2*m/X);m+=0.3;e(m<0)q 0;e(m>1)q 1;q m}h 20=1;h R=G=F=0;o Q(a,b){R=G;G=F;F=a;e(!((R>0&&G>0&&F>0)||(R<0&&G<0&&F<0)||R*G*F==0))q;z+=(a);13=H(z-2a,J);e(13<2b)8.4(\'N\').y="28"+(a>0?"":"f");t e(13<25)8.4(\'N\').y="26"+(a>0?"":"f");t 8.4(\'N\').y="27"+(a>0?"":"f");e(13<29)8.4(\'11\').c.C="O";8.4(\'1u\').c.w=8.4(\'1r\').c.w=H(z,1c)-1c+"x";8.4(\'1y\').c.w=H(z,1x)-1x+"x";v(h i=0;i<A;i++){w=H(z+d[i].T,J);14=H(z+d[i].T+d[i].V,J);e(14<d[i].V)w-=J;e(w<X){8.4(\'g\'+i).c.C="1q";8.4(\'g\'+i).c.w=w+"x";U=(w+14-X)/2;e(8.4(\'g\'+i).y=="1Z"){8.4(\'g\'+i).c.1h=(d[i].1g-U*0.12)+"x 1b"}e(8.4(\'g\'+i).y=="1Y"||8.4(\'g\'+i).y=="1o"){8.4(\'g\'+i).c.1h=(d[i].1g+U*U*0.2e)+"x 1b"}t e(8.4(\'g\'+i).y=="W"){8.4(\'g\'+i).c.1h=(d[i].1g-U*0.2)+"x 1b"}}t 8.4(\'g\'+i).c.C="O"}};',62,147,'||||getElementById||||document||||style|picjson|if||pic|var||li|zIndex|id||info|function|png|return|txt||else|div|for|left|px|className|currentx|picct|class|display|newimages|arr|alast1|alast2|mod|length|plen|ev|height|ready|boat|none|picarr|move|alast3|oMain|dis0|mdis|width|cloud|swidth|split|myPush|background|arrow1||modcrtx|right|this|sun|infoclose|dayan|wavemask|wave|0px|1280|ontouchstart|top|ele|bgleft|backgroundPosition|imgLoad|dis|640|100|innerHTML|imgReady|buildback|onclick|block|wavebox|Array|new|cloudbox|preloadimages|arguments|2560|dayanbox|clearInterval|window|close|object|indexOf|typeof|Image|screen|push|br|img|boat03|boat03f|setInterval|prototype|加载中|num|jpg|gif|src|parseInt|boat02|boat02f|boat01|boat01f|build|my|alast|abs|700|getOpacity|Math|13565|boatb|boata|boatc|23220|880|7154|point|main|000065|960px|mid|yuer|move2|move1|onmousewheel|onmousedown|move0'.split('|'),0,{}))};
-eval(function(p,a,c,k,e,d){e=function(c){return(c<a?"":e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)d[e(c)]=k[c]||e(c);k=[function(e){return d[e]}];e=function(){return'\\w+'};c=1;};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p;}('7 r(2,6){5 2=2||f.j;5 b=2.c;5 a=2.d;8.p=7(2){5 2=2||f.j;6(2.c-b,2.d-a);b=2.c;a=2.d};8.s=7(){8.p=i};h g}7 q(2,6){5 b=2.e[0].c;5 a=2.e[0].d;8.m=7(2){6(2.e[0].c-b,2.e[0].d-a);b=2.e[0].c;a=2.e[0].d};8.u=7(){8.t=i;8.m=i};h g}7 D(2,6){5 4=0;9(2.l){4=2.l/C;9(f.B)4=-4}F 9(2.k){4=-2.k/3}9(4)6(E*4,0);h g}7 x(2,6){5 4=0;5 2=2||f.j||n.w.v.n[0];9(2&&2.o==A)4=-1;9(2&&2.o==z)4=1;9(4)6(y*4,0);h g}',42,42,'||ev||delta|var|mvfn|function|document|if|disY|disX|clientX|clientY|changedTouches|window|false|return|null|event|detail|wheelDelta|ontouchmove|arguments|keyCode|onmousemove|move1|move0|onmouseup|ontouchstart|ontouchend|caller|callee|move3|10|39|37|opera|120|move2|40|else'.split('|'),0,{}))
-
+	];
+eval(function(p,a,c,k,e,d){e=function(c){return(c<a?"":e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)d[e(c)]=k[c]||e(c);k=[function(e){return d[e]}];e=function(){return'\\w+'};c=1;};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p;}('h C=[];o 1v(E){h E=(1E E!="1C")?[E]:E;x(h i=0;i<E.I;i++){C[i]=1t 1F();C[i].1S="1J/"+E[i]}}h A=d.I;1s.1N.Z=o(){x(h i=0;i<1w.I;i++){h 1f=1w[i];e(15.1D(1f)==-1){15.1H(1f)}}};h P=1t 1s();x(h i=1;i<A;i++){P.Z(d[i].10.Y(\'/\')[1].Y(\')\')[0]);e(d[i].n)P.Z(d[i].n.Y(\'/\')[1].Y(\')\')[0])}P.Z("1B.p","16.1Q","W.p","11.p","19.p","1a.p","18.1R","1W.p","1X.p","1U.p","1V.p","1K.p","1L.p");1v(P);h M=0;h 1i=1M(o(){e(M==C.I){1z(1i);1n();q}M=0;x(h i=0;i<C.I;i++)e(C[i].L)M++;8.4(\'1P\').1m="1O<1I>"+1T(1l*M/C.I)+"%"},1l);d[0].T=0;x(h i=1;i<A;i++)d[i].T=d[i-1].T+d[i-1].1j;h z=0;h X=1c;e(1A.1G.V<=1k)X=1k;h J=0;x(h i=0;i<A;i++)J+=d[i].1j;h r="";x(h i=0;i<A;i++)r+=\'<j l="g\'+i+\'"></j>\';r+=\'<j l="N" ></j>\';r+=\'<t l="1r"><j l="1a" ></j></t>\';r+=\'<j l="19" ></j>\';r+=\'<j l="11" ></j>\';r+=\'<j l="16" ></j>\';r+=\'<t l="1y"><j l="18" ></j></t>\';r+=\'<t l="n" ><t l="17" ></t></t>\';r+=\'<t l="1u"><j l="W" ></j></t>\';o 1n(){h S=8.4(\'2d\');S.1m=r;x(h i=0;i<A;i++){e(d[i].L)8.4(\'g\'+i).c.L=d[i].L+"u";w 8.4(\'g\'+i).c.L="2f";8.4(\'g\'+i).c.V=d[i].V+"u";8.4(\'g\'+i).c.10=d[i].10;8.4(\'g\'+i).c.D="O";e(d[i].1e){8.4(\'g\'+i).c.1e=d[i].1e+"u"}e(d[i].n){8.4(\'g\'+i).n=d[i].n}e(d[i].B){8.4(\'g\'+i).y=d[i].B;e(d[i].B=="W")8.4(\'g\'+i).c.k="2";w e(d[i].B=="1o")8.4(\'g\'+i).c.k="6";w e(d[i].B=="2g")8.4(\'g\'+i).c.k="7";w e(d[i].B=="2h")8.4(\'g\'+i).c.k="1";w e(d[i].B=="2c"){8.4(\'g\'+i).c.k="7";8.4(\'g\'+i).1p=8.4(\'g\'+i).1d=o(){8.4(\'n\').c.10=15.n;8.4(\'n\').c.D="1q"}}w 8.4(\'g\'+i).c.k="3"}}8.4(\'n\').c.D="O";8.4(\'17\').1p=8.4(\'17\').1d=o(){8.4(\'n\').c.D="O"};8.4(\'1a\').c.k="1";8.4(\'19\').c.k="1";8.4(\'W\').c.k="1";8.4(\'18\').c.k="1";8.4(\'16\').c.k="1";8.4(\'n\').c.k="9";8.4(\'N\').c.k="5";8.4(\'11\').c.k="9";S.2l=o(K){q 2m(K,Q)};S.1d=o(K){q 2j(K,Q)};S.2k=o(K){q 2i(K,Q)};Q(22,0)}o H(a,b){e(a>0)q a%b;e(a%b)q b-((-a)%b);q 0}o 23(m,s){m=24.21(m);m=1-(s*2*m/X);m+=0.3;e(m<0)q 0;e(m>1)q 1;q m}h 20=1;h R=F=G=0;o Q(a,b){R=F;F=G;G=a;e(!((R>0&&F>0&&G>0)||(R<0&&F<0&&G<0)||R*F*G==0))q;z+=(a);13=H(z-2a,J);e(13<2b)8.4(\'N\').y="28"+(a>0?"":"f");w e(13<25)8.4(\'N\').y="26"+(a>0?"":"f");w 8.4(\'N\').y="27"+(a>0?"":"f");e(13<29)8.4(\'11\').c.D="O";8.4(\'1u\').c.v=8.4(\'1r\').c.v=H(z,1c)-1c+"u";8.4(\'1y\').c.v=H(z,1x)-1x+"u";x(h i=0;i<A;i++){v=H(z+d[i].T,J);14=H(z+d[i].T+d[i].V,J);e(14<d[i].V)v-=J;e(v<X){8.4(\'g\'+i).c.D="1q";8.4(\'g\'+i).c.v=v+"u";U=(v+14-X)/2;e(8.4(\'g\'+i).y=="1Z"){8.4(\'g\'+i).c.1h=(d[i].1g-U*0.12)+"u 1b"}e(8.4(\'g\'+i).y=="1Y"||8.4(\'g\'+i).y=="1o"){8.4(\'g\'+i).c.1h=(d[i].1g+U*U*0.2e)+"u 1b"}e(8.4(\'g\'+i).y=="W"){8.4(\'g\'+i).c.1h=(d[i].1g-U*0.2)+"u 1b"}}w 8.4(\'g\'+i).c.D="O"}};',62,147,'||||getElementById||||document||||style|picjson|if||pic|var||li|zIndex|id||info|function|png|return|txt||div|px|left|else|for|className|currentx|picct|class|newimages|display|arr|alast2|alast1|mod|length|plen|ev|height|ready|boat|none|picarr|move|alast3|oMain|dis0|mdis|width|cloud|swidth|split|myPush|background|arrow1||modcrtx|right|this|sun|infoclose|dayan|wavemask|wave|0px|1280|ontouchstart|top|ele|bgleft|backgroundPosition|imgLoad|dis|640|100|innerHTML|imgReady|buildback|onclick|block|wavebox|Array|new|cloudbox|preloadimages|arguments|2560|dayanbox|clearInterval|window|close|object|indexOf|typeof|Image|screen|push|br|img|boat03|boat03f|setInterval|prototype|加载中|num|jpg|gif|src|parseInt|boat02|boat02f|boat01|boat01f|build|my|alast|abs|700|getOpacity|Math|13565|boatb|boata|boatc|23220|880|7154|point|main|000065|960px|mid|yuer|move2|move1|onmousewheel|onmousedown|move0'.split('|'),0,{}))};eval(function(p,a,c,k,e,d){e=function(c){return(c<a?"":e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)d[e(c)]=k[c]||e(c);k=[function(e){return d[e]}];e=function(){return'\\w+'};c=1;};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p;}('7 r(2,6){5 2=2||f.j;5 b=2.c;5 a=2.d;8.p=7(2){5 2=2||f.j;6(2.c-b,2.d-a);b=2.c;a=2.d};8.s=7(){8.p=i};h g}7 q(2,6){5 b=2.e[0].c;5 a=2.e[0].d;8.m=7(2){6(2.e[0].c-b,2.e[0].d-a);b=2.e[0].c;a=2.e[0].d};8.u=7(){8.t=i;8.m=i};h g}7 D(2,6){5 4=0;9(2.l){4=2.l/C;9(f.B)4=-4}F 9(2.k){4=-2.k/3}9(4)6(E*4,0);h g}7 x(2,6){5 4=0;5 2=2||f.j||n.w.v.n[0];9(2&&2.o==A)4=-1;9(2&&2.o==z)4=1;9(4)6(y*4,0);h g}',42,42,'||ev||delta|var|mvfn|function|document|if|disY|disX|clientX|clientY|changedTouches|window|false|return|null|event|detail|wheelDelta|ontouchmove|arguments|keyCode|onmousemove|move1|move0|onmouseup|ontouchstart|ontouchend|caller|callee|move3|10|39|37|opera|120|move2|40|else'.split('|'),0,{}))
 </script>
 </html>
